5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1595_1017.log
== TEST (2019-03-22 12:36:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de t1: ")))
g1 = radians(float(input("longitude de g1: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("longitude de g2: ")))
R = 6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
print(round(d,2))

-- ERROR:
File "XXXX", line 10
    d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                     ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:37:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de t1: ")))
g1 = radians(float(input("longitude de g1: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("longitude de g2: ")))
R = 6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))

-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 12:37:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de t1: ")))
g1 = radians(float(input("longitude de g1: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("longitude de g2: ")))
R = 6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))

-- EXECUTION TIME:
0.133689
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
